# AJPicoCar

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
docs/: IDEAS.md
docs/research/: 2026-06-10-lidar-comparison-tables.md  2026-06-10-lidar-integration.md  2026-06-10-lidar-market.md  2026-06-10-longrange-link.md  2026-06-10-longrange-roadmap.md  2026-06-11-faster-motors-encoder.md  2026-06-12-audit.md  2026-06-12-led-lighting-controller.md  2026-06-12-led-programmatic-control.md  2026-06-12-p4-status-display.md
ios/: project.yml
ios/ESP32Car/: AppFlow.swift  CalibClient.swift  CalibrationView.swift  CarConnection.swift  CarDimensionsView.swift  CarDimsDiagram.swift  CarHost.swift  CarStatus.swift  ConnectView.swift  ControlModel.swift  DimsClient.swift  DownloadBar.swift  DriveDiagram.swift  DriveView.swift  ESP32CarApp.swift  Info.plist  (+33 more)
main/: CMakeLists.txt  calib_api.c  calib_api.h  calibration.c  calibration.h  captive.c  captive.h  car.c  car.h  cfg_json.c  cfg_json.h  control_proto.c  control_proto.h  dims.c  dims.h  dims_api.c  dims_api.h  http_server.c  http_server.h  main.c  mixer.c  mixer.h  motors.c  motors.h  ota_api.c  ota_api.h  pca9685.c  pca9685.h  ramp.c  ramp.h  ramp_api.c  ramp_api.h  recovery.c  recovery.h  recovery_api.c  recovery_api.h  status_api.c  status_api.h  telemetry.c  telemetry.h  (+13 more)
main/web/: index.html
test/: Makefile  test_calibration.c  test_control_proto.c  test_mixer.c  test_motors.c  test_ramp.c  test_recovery.c  test_telemetry.c  test_trim.c  test_watchdog.c  test_wheel.c
tools/: release.sh
(+109 files in other folders)
